--- a/KD/Content/Plugins/DataTablesCustom/TableCustom.css
+++ b/KD/Content/Plugins/DataTablesCustom/TableCustom.css
@@ -319,9 +319,9 @@ table.dataTable thead .sorting_asc_disabled:after,
 table.dataTable thead .sorting_desc_disabled:before,
 table.dataTable thead .sorting_desc_disabled:after {
     position: absolute;
-    bottom: .9em;
+    /* bottom: 1em; */
     display: block;
-    opacity: .3;
+    opacity: .2;
 }
 
 table.dataTable thead .sorting:before,
@@ -474,6 +474,7 @@ table.table>thead>tr>th {
     color: #545454 !important;
     font-weight: 600 !important;
     font-size: 12px !important;
+    line-height: 13px !important;
     vertical-align: middle;
     padding: 15px 10px;
     user-select: none;
@@ -510,8 +511,8 @@ table.dataTable thead .sorting_asc_disabled:before,
 table.dataTable thead .sorting_asc_disabled:after,
 table.dataTable thead .sorting_desc_disabled:before,
 table.dataTable thead .sorting_desc_disabled:after {
-    bottom: 12px !important;
     font-size: 12px !important;
+    line-height: 19px !important;
     font-weight: 500 !important;
 }
 
