--- a/KD/Content/Plugins/tagify-master/src/tagify.css
+++ b/KD/Content/Plugins/tagify-master/src/tagify.css
@@ -1,4 +1,3 @@
-@charset "UTF-8";
 :root {
   --tagify-dd-color-primary: rgb(53,149,246);
   --tagify-dd-bg-color: white;
@@ -27,9 +26,14 @@
   --placeholder-color: rgba(0, 0, 0, 0.4);
   --placeholder-color-focus: rgba(0, 0, 0, 0.25);
   --loader-size: .8em;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  align-items: flex-start;
-  flex-wrap: wrap;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
   border: 1px solid #DDD;
   border: 1px solid var(--tags-border-color);
   padding: 0;
@@ -37,91 +41,136 @@
   cursor: text;
   outline: none;
   position: relative;
-  box-sizing: border-box;
-  transition: 0.1s;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  -webkit-transition: .1s;
+  transition: .1s;
 }
+
+@-webkit-keyframes tags--bump {
+  30% {
+    -webkit-transform: scale(1.2);
+            transform: scale(1.2);
+  }
+}
+
 @keyframes tags--bump {
   30% {
-    transform: scale(1.2);
+    -webkit-transform: scale(1.2);
+            transform: scale(1.2);
   }
 }
+
+@-webkit-keyframes rotateLoader {
+  to {
+    -webkit-transform: rotate(1turn);
+            transform: rotate(1turn);
+  }
+}
+
 @keyframes rotateLoader {
   to {
-    transform: rotate(1turn);
+    -webkit-transform: rotate(1turn);
+            transform: rotate(1turn);
   }
 }
+
 .tagify:hover {
   border-color: #CCC;
   border-color: var(--tags-hover-border-color);
 }
+
 .tagify.tagify--focus {
+  -webkit-transition: 0s;
   transition: 0s;
   border-color: #3595f6;
   border-color: var(--tags-focus-border-color);
 }
+
 .tagify[readonly]:not(.tagify--mix) {
   cursor: default;
 }
+
 .tagify[readonly]:not(.tagify--mix) > .tagify__input {
   visibility: hidden;
   width: 0;
   margin: 5px 0;
 }
+
 .tagify[readonly]:not(.tagify--mix) .tagify__tag > div {
   padding: 0.3em 0.5em;
   padding: var(--tag-pad);
 }
+
 .tagify[readonly]:not(.tagify--mix) .tagify__tag > div::before {
   background: linear-gradient(45deg, var(--tag-bg) 25%, transparent 25%, transparent 50%, var(--tag-bg) 50%, var(--tag-bg) 75%, transparent 75%, transparent) 0/5px 5px;
-  box-shadow: none;
-  filter: brightness(0.95);
+  -webkit-box-shadow: none;
+          box-shadow: none;
+  -webkit-filter: brightness(0.95);
+          filter: brightness(0.95);
 }
+
 .tagify[readonly] .tagify__tag__removeBtn {
   display: none;
 }
+
 .tagify--loading .tagify__input > br:last-child {
   display: none;
 }
+
 .tagify--loading .tagify__input::before {
   content: none;
 }
+
 .tagify--loading .tagify__input::after {
-  content: "";
+  content: '';
   vertical-align: middle;
   opacity: 1;
-  width: 0.7em;
-  height: 0.7em;
+  width: .7em;
+  height: .7em;
   width: var(--loader-size);
   height: var(--loader-size);
   border: 3px solid;
   border-color: #EEE #BBB #888 transparent;
   border-radius: 50%;
-  animation: rotateLoader 0.4s infinite linear;
-  content: "" !important;
-  margin: -2px 0 -2px 0.5em;
+  -webkit-animation: rotateLoader .4s infinite linear;
+          animation: rotateLoader .4s infinite linear;
+  content: '' !important;
+  margin: -2px 0 -2px .5em;
 }
+
 .tagify--loading .tagify__input:empty::after {
   margin-left: 0;
 }
+
 .tagify + input,
 .tagify + textarea {
   position: absolute !important;
   left: -9999em !important;
-  transform: scale(0) !important;
+  -webkit-transform: scale(0) !important;
+          transform: scale(0) !important;
 }
+
 .tagify__tag {
+  display: -webkit-inline-box;
+  display: -ms-inline-flexbox;
   display: inline-flex;
-  align-items: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   margin: 5px 0 5px 5px;
   position: relative;
   z-index: 1;
   outline: none;
   cursor: default;
-  transition: 0.13s ease-out;
+  -webkit-transition: .13s ease-out;
+  transition: .13s ease-out;
 }
+
 .tagify__tag > div {
   vertical-align: top;
-  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
   max-width: 100%;
   padding: 0.3em 0.5em;
   padding: var(--tag-pad, 0.3em 0.5em);
@@ -130,8 +179,10 @@
   line-height: inherit;
   border-radius: 3px;
   white-space: nowrap;
-  transition: 0.13s ease-out;
+  -webkit-transition: .13s ease-out;
+  transition: .13s ease-out;
 }
+
 .tagify__tag > div > * {
   white-space: pre-wrap;
   overflow: hidden;
@@ -142,20 +193,24 @@
   max-width: auto;
   min-width: var(--tag--min-width, 1ch);
   max-width: var(--tag--max-width, auto);
-  transition: 0.8s ease, 0.1s color;
+  -webkit-transition: .8s ease, .1s color;
+  transition: .8s ease, .1s color;
 }
+
 .tagify__tag > div > *[contenteditable] {
   outline: none;
   -webkit-user-select: text;
      -moz-user-select: text;
+      -ms-user-select: text;
           user-select: text;
   cursor: text;
   margin: -2px;
   padding: 2px;
   max-width: 350px;
 }
+
 .tagify__tag > div::before {
-  content: "";
+  content: '';
   position: absolute;
   border-radius: inherit;
   left: 0;
@@ -164,43 +219,57 @@
   bottom: 0;
   z-index: -1;
   pointer-events: none;
+  -webkit-transition: 120ms ease;
   transition: 120ms ease;
-  animation: tags--bump 0.3s ease-out 1;
-  box-shadow: 0 0 0 1.1em #E5E5E5 inset;
-  box-shadow: 0 0 0 var(--tag-inset-shadow-size, 1.1em) var(--tag-bg, #E5E5E5) inset;
+  -webkit-animation: tags--bump .3s ease-out 1;
+          animation: tags--bump .3s ease-out 1;
+  -webkit-box-shadow: 0 0 0 1.1em #E5E5E5 inset;
+          box-shadow: 0 0 0 1.1em #E5E5E5 inset;
+  -webkit-box-shadow: 0 0 0 var(--tag-inset-shadow-size, 1.1em) var(--tag-bg, #E5E5E5) inset;
+          box-shadow: 0 0 0 var(--tag-inset-shadow-size, 1.1em) var(--tag-bg, #E5E5E5) inset;
 }
+
 .tagify__tag:hover:not([readonly]) div::before, .tagify__tag:focus div::before {
   top: -2px;
   right: -2px;
   bottom: -2px;
   left: -2px;
-  box-shadow: 0 0 0 1.1em #D3E2E2 inset;
-  box-shadow: 0 0 0 var(--tag-inset-shadow-size, 1.1em) var(--tag-hover, #D3E2E2) inset;
+  -webkit-box-shadow: 0 0 0 1.1em #D3E2E2 inset;
+          box-shadow: 0 0 0 1.1em #D3E2E2 inset;
+  -webkit-box-shadow: 0 0 0 var(--tag-inset-shadow-size, 1.1em) var(--tag-hover, #D3E2E2) inset;
+          box-shadow: 0 0 0 var(--tag-inset-shadow-size, 1.1em) var(--tag-hover, #D3E2E2) inset;
 }
+
 .tagify__tag--loading {
   pointer-events: none;
 }
+
 .tagify__tag--loading .tagify__tag__removeBtn {
   display: none;
 }
+
 .tagify__tag--loading::after {
-  --loader-size: .4em;
-  content: "";
+  --loader-size:  .4em;
+  content: '';
   vertical-align: middle;
   opacity: 1;
-  width: 0.7em;
-  height: 0.7em;
+  width: .7em;
+  height: .7em;
   width: var(--loader-size);
   height: var(--loader-size);
   border: 3px solid;
   border-color: #EEE #BBB #888 transparent;
   border-radius: 50%;
-  animation: rotateLoader 0.4s infinite linear;
-  margin: 0 0.5em 0 -0.1em;
+  -webkit-animation: rotateLoader .4s infinite linear;
+          animation: rotateLoader .4s infinite linear;
+  margin: 0 .5em 0 -.1em;
 }
+
 .tagify__tag--flash div::before {
-  animation: none;
+  -webkit-animation: none;
+          animation: none;
 }
+
 .tagify__tag--hide {
   width: 0 !important;
   padding-left: 0;
@@ -208,57 +277,91 @@
   margin-left: 0;
   margin-right: 0;
   opacity: 0;
-  transform: scale(0);
+  -webkit-transform: scale(0);
+          transform: scale(0);
+  -webkit-transition: 0.3s;
   transition: 0.3s;
+  -webkit-transition: var(--tag-hide-transition, 0.3s);
   transition: var(--tag-hide-transition, 0.3s);
   pointer-events: none;
 }
+
 .tagify__tag--hide > div > * {
   white-space: nowrap;
 }
+
 .tagify__tag.tagify--noAnim > div::before {
-  animation: none;
+  -webkit-animation: none;
+          animation: none;
 }
+
 .tagify__tag.tagify--notAllowed:not(.tagify__tag--editable) div > span {
-  opacity: 0.5;
+  opacity: .5;
 }
+
 .tagify__tag.tagify--notAllowed:not(.tagify__tag--editable) div::before {
-  box-shadow: 0 0 0 1.1em rgba(211, 148, 148, 0.5) inset !important;
-  box-shadow: 0 0 0 var(--tag-inset-shadow-size, 1.1em) var(--tag-invalid-bg, rgba(211, 148, 148, 0.5)) inset !important;
-  transition: 0.2s;
+  -webkit-box-shadow: 0 0 0 1.1em rgba(211, 148, 148, 0.5) inset !important;
+          box-shadow: 0 0 0 1.1em rgba(211, 148, 148, 0.5) inset !important;
+  -webkit-box-shadow: 0 0 0 var(--tag-inset-shadow-size, 1.1em) var(--tag-invalid-bg, rgba(211, 148, 148, 0.5)) inset !important;
+          box-shadow: 0 0 0 var(--tag-inset-shadow-size, 1.1em) var(--tag-invalid-bg, rgba(211, 148, 148, 0.5)) inset !important;
+  -webkit-transition: .2s;
+  transition: .2s;
 }
+
 .tagify__tag[readonly] .tagify__tag__removeBtn {
   display: none;
 }
+
 .tagify__tag[readonly] > div::before {
   background: linear-gradient(45deg, var(--tag-bg) 25%, transparent 25%, transparent 50%, var(--tag-bg) 50%, var(--tag-bg) 75%, transparent 75%, transparent) 0/5px 5px;
-  box-shadow: none;
-  filter: brightness(0.95);
+  -webkit-box-shadow: none;
+          box-shadow: none;
+  -webkit-filter: brightness(0.95);
+          filter: brightness(0.95);
 }
+
 .tagify__tag--editable > div {
   color: black;
   color: var(--tag-text-color--edit, black);
 }
+
 .tagify__tag--editable > div::before {
-  box-shadow: 0 0 0 2px #D3E2E2 inset !important;
-  box-shadow: 0 0 0 2px var(--tag-hover, #D3E2E2) inset !important;
+  -webkit-box-shadow: 0 0 0 2px #D3E2E2 inset !important;
+          box-shadow: 0 0 0 2px #D3E2E2 inset !important;
+  -webkit-box-shadow: 0 0 0 2px var(--tag-hover, #D3E2E2) inset !important;
+          box-shadow: 0 0 0 2px var(--tag-hover, #D3E2E2) inset !important;
 }
+
 .tagify__tag--editable > .tagify__tag__removeBtn {
   pointer-events: none;
 }
+
 .tagify__tag--editable > .tagify__tag__removeBtn::after {
   opacity: 0;
-  transform: translateX(100%) translateX(5px);
+  -webkit-transform: translateX(100%) translateX(5px);
+          transform: translateX(100%) translateX(5px);
 }
+
 .tagify__tag--editable.tagify--invalid > div::before {
-  box-shadow: 0 0 0 2px #D39494 inset !important;
-  box-shadow: 0 0 0 2px var(--tag-invalid-color, #D39494) inset !important;
+  -webkit-box-shadow: 0 0 0 2px #D39494 inset !important;
+          box-shadow: 0 0 0 2px #D39494 inset !important;
+  -webkit-box-shadow: 0 0 0 2px var(--tag-invalid-color, #D39494) inset !important;
+          box-shadow: 0 0 0 2px var(--tag-invalid-color, #D39494) inset !important;
 }
+
 .tagify__tag__removeBtn {
-  order: 5;
+  -webkit-box-ordinal-group: 6;
+      -ms-flex-order: 5;
+          order: 5;
+  display: -webkit-inline-box;
+  display: -ms-inline-flexbox;
   display: inline-flex;
-  align-items: center;
-  justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   border-radius: 50px;
   cursor: pointer;
   font: 14px/1 Arial;
@@ -268,37 +371,53 @@
   color: var(--tag-remove-btn-color, black);
   width: 14px;
   height: 14px;
-  margin-right: 4.6666666667px;
+  margin-right: 4.66667px;
   margin-left: auto;
   overflow: hidden;
-  transition: 0.2s ease-out;
+  -webkit-transition: .2s ease-out;
+  transition: .2s ease-out;
 }
+
 .tagify__tag__removeBtn::after {
-  content: "×";
-  transition: 0.3s, color 0s;
+  content: "\00D7";
+  -webkit-transition: .3s, color 0s;
+  transition: .3s, color 0s;
 }
+
 .tagify__tag__removeBtn:hover {
   color: white;
   background: #c77777;
   background: var(--tag-remove-btn-bg--hover, #c77777);
 }
+
 .tagify__tag__removeBtn:hover + div > span {
-  opacity: 0.5;
+  opacity: .5;
 }
+
 .tagify__tag__removeBtn:hover + div::before {
-  box-shadow: 0 0 0 1.1em rgba(211, 148, 148, 0.3) inset !important;
-  box-shadow: 0 0 0 var(--tag-inset-shadow-size, 1.1em) var(--tag-remove-bg, rgba(211, 148, 148, 0.3)) inset !important;
-  transition: box-shadow 0.2s;
+  -webkit-box-shadow: 0 0 0 1.1em rgba(211, 148, 148, 0.3) inset !important;
+          box-shadow: 0 0 0 1.1em rgba(211, 148, 148, 0.3) inset !important;
+  -webkit-box-shadow: 0 0 0 var(--tag-inset-shadow-size, 1.1em) var(--tag-remove-bg, rgba(211, 148, 148, 0.3)) inset !important;
+          box-shadow: 0 0 0 var(--tag-inset-shadow-size, 1.1em) var(--tag-remove-bg, rgba(211, 148, 148, 0.3)) inset !important;
+  -webkit-transition: -webkit-box-shadow .2s;
+  transition: -webkit-box-shadow .2s;
+  transition: box-shadow .2s;
+  transition: box-shadow .2s, -webkit-box-shadow .2s;
 }
+
 .tagify:not(.tagify--mix) .tagify__input br {
   display: none;
 }
+
 .tagify:not(.tagify--mix) .tagify__input * {
   display: inline;
   white-space: nowrap;
 }
+
 .tagify__input {
-  flex-grow: 1;
+  -webkit-box-flex: 1;
+      -ms-flex-positive: 1;
+          flex-grow: 1;
   display: inline-block;
   min-width: 110px;
   margin: 5px;
@@ -309,63 +428,78 @@
   white-space: pre-wrap;
   color: inherit;
   color: var(--input-color, inherit);
-  box-sizing: inherit;
+  -webkit-box-sizing: inherit;
+          box-sizing: inherit;
   /* Seems firefox newer versions don't need this any more
-          @supports ( -moz-appearance:none ){
-              &::before{
-                  line-height: inherit;
-                  position:relative;
-              }
-          }
-  */
+        @supports ( -moz-appearance:none ){
+            &::before{
+                line-height: inherit;
+                position:relative;
+            }
+        }
+*/
   /*
-      in "mix mode" the tags are inside the "input" element
-  */
+            in "mix mode" the tags are inside the "input" element
+        */
 }
-@-moz-document url-prefix() {}
-.tagify__input:empty::before {
-  transition: 0.2s ease-out;
+
+@-moz-document url-prefix() {}.tagify__input:empty::before {
+  -webkit-transition: .2s ease-out;
+  transition: .2s ease-out;
   opacity: 1;
-  transform: none;
+  -webkit-transform: none;
+          transform: none;
   display: inline-block;
   width: auto;
 }
+
 .tagify--mix .tagify__input:empty::before {
   display: inline-block;
 }
+
 .tagify__input:focus {
   outline: none;
 }
+
 .tagify__input:focus::before {
-  transition: 0.2s ease-out;
+  -webkit-transition: .2s ease-out;
+  transition: .2s ease-out;
   opacity: 0;
-  transform: translatex(6px);
+  -webkit-transform: translatex(6px);
+          transform: translatex(6px);
   /* ALL MS BROWSERS: hide placeholder (on focus) otherwise the caret is places after it, which is weird */
   /* IE10+ CSS styles go here */
   /* IE Edge 12+ CSS styles go here */
 }
+
 @media all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
   .tagify__input:focus::before {
     display: none;
   }
 }
+
 @supports (-ms-ime-align: auto) {
   .tagify__input:focus::before {
     display: none;
   }
 }
+
 .tagify__input:focus:empty::before {
-  transition: 0.2s ease-out;
+  -webkit-transition: .2s ease-out;
+  transition: .2s ease-out;
   opacity: 1;
-  transform: none;
+  -webkit-transform: none;
+          transform: none;
   color: rgba(0, 0, 0, 0.25);
   color: var(--placeholder-color-focus);
 }
+
 @-moz-document url-prefix() {
   .tagify__input:focus:empty::after {
     display: none;
   }
 }
+
 .tagify__input::before {
   content: attr(data-placeholder);
   height: 1em;
@@ -379,30 +513,37 @@
   opacity: 0;
   position: absolute;
 }
+
 .tagify--mix .tagify__input::before {
   display: none;
   position: static;
   line-height: inherit;
 }
+
 .tagify__input::after {
   content: attr(data-suggest);
   display: inline-block;
-  white-space: pre; /* allows spaces at the beginning */
+  white-space: pre;
+  /* allows spaces at the beginning */
   color: black;
-  opacity: 0.3;
+  opacity: .3;
   pointer-events: none;
   max-width: 100px;
 }
+
 .tagify__input .tagify__tag {
   margin: 0 1px;
 }
+
 .tagify__input .tagify__tag > div {
   padding-top: 0;
   padding-bottom: 0;
 }
+
 .tagify--mix {
   display: block;
 }
+
 .tagify--mix .tagify__input {
   padding: 5px;
   margin: 0;
@@ -411,15 +552,18 @@
   line-height: 1.5;
   display: block;
 }
+
 .tagify--mix .tagify__input::before {
   height: auto;
 }
+
 .tagify--mix .tagify__input::after {
   content: none;
 }
+
 .tagify--select::after {
-  content: ">";
-  opacity: 0.5;
+  content: '>';
+  opacity: .5;
   position: absolute;
   top: 50%;
   right: 0;
@@ -428,48 +572,65 @@
   line-height: 8px;
   height: 8px;
   pointer-events: none;
-  transform: translate(-150%, -50%) scaleX(1.2) rotate(90deg);
-  transition: 0.2s ease-in-out;
+  -webkit-transform: translate(-150%, -50%) scaleX(1.2) rotate(90deg);
+          transform: translate(-150%, -50%) scaleX(1.2) rotate(90deg);
+  -webkit-transition: .2s ease-in-out;
+  transition: .2s ease-in-out;
 }
+
 .tagify--select[aria-expanded=true]::after {
-  transform: translate(-150%, -50%) rotate(270deg) scaleY(1.2);
+  -webkit-transform: translate(-150%, -50%) rotate(270deg) scaleY(1.2);
+          transform: translate(-150%, -50%) rotate(270deg) scaleY(1.2);
 }
+
 .tagify--select .tagify__tag {
   position: absolute;
   top: 0;
   right: 1.8em;
   bottom: 0;
 }
+
 .tagify--select .tagify__tag div {
   display: none;
 }
+
 .tagify--select .tagify__input {
   width: 100%;
 }
+
 .tagify--invalid {
   --tags-border-color: #D39494;
 }
+
 .tagify__dropdown {
   position: absolute;
   z-index: 9999;
-  transform: translateY(1px);
+  -webkit-transform: translateY(1px);
+          transform: translateY(1px);
   overflow: hidden;
 }
-.tagify__dropdown[placement=top] {
+
+.tagify__dropdown[placement="top"] {
   margin-top: 0;
-  transform: translateY(-100%);
+  -webkit-transform: translateY(-100%);
+          transform: translateY(-100%);
 }
-.tagify__dropdown[placement=top] .tagify__dropdown__wrapper {
+
+.tagify__dropdown[placement="top"] .tagify__dropdown__wrapper {
   border-top-width: 1px;
   border-bottom-width: 0;
 }
-.tagify__dropdown[position=text] {
-  box-shadow: 0 0 0 3px rgba(var(--tagify-dd-color-primary), 0.1);
-  font-size: 0.9em;
+
+.tagify__dropdown[position="text"] {
+  -webkit-box-shadow: 0 0 0 3px rgba(var(--tagify-dd-color-primary), 0.1);
+          box-shadow: 0 0 0 3px rgba(var(--tagify-dd-color-primary), 0.1);
+  font-size: .9em;
 }
-.tagify__dropdown[position=text] .tagify__dropdown__wrapper {
+
+.tagify__dropdown[position="text"] .tagify__dropdown__wrapper {
   border-width: 1px;
 }
+
 .tagify__dropdown__wrapper {
   max-height: 300px;
   overflow: auto;
@@ -479,18 +640,26 @@
   border-color: var(--tagify-dd-color-primary);
   border-width: 1.1px;
   border-top-width: 0;
-  box-shadow: 0 2px 4px -2px rgba(0, 0, 0, 0.2);
+  -webkit-box-shadow: 0 2px 4px -2px rgba(0, 0, 0, 0.2);
+          box-shadow: 0 2px 4px -2px rgba(0, 0, 0, 0.2);
+  -webkit-transition: 0.25s cubic-bezier(0, 1, 0.5, 1);
   transition: 0.25s cubic-bezier(0, 1, 0.5, 1);
 }
+
 .tagify__dropdown--initial .tagify__dropdown__wrapper {
   max-height: 20px;
-  transform: translateY(-1em);
+  -webkit-transform: translateY(-1em);
+          transform: translateY(-1em);
 }
-.tagify__dropdown--initial[placement=top] .tagify__dropdown__wrapper {
-  transform: translateY(2em);
+
+.tagify__dropdown--initial[placement="top"] .tagify__dropdown__wrapper {
+  -webkit-transform: translateY(2em);
+          transform: translateY(2em);
 }
+
 .tagify__dropdown__item {
-  box-sizing: inherit;
+  -webkit-box-sizing: inherit;
+          box-sizing: inherit;
   padding: 0.3em 0.5em;
   margin: 1px;
   cursor: pointer;
@@ -498,11 +667,15 @@
   position: relative;
   outline: none;
 }
+
 .tagify__dropdown__item--active {
-  background: rgb(53, 149, 246);
+  background: #3595f6;
   background: var(--tagify-dd-color-primary);
   color: white;
 }
+
 .tagify__dropdown__item:active {
-  filter: brightness(105%);
-}/*# sourceMappingURL=tagify.css.map */
+  -webkit-filter: brightness(105%);
+          filter: brightness(105%);
+}
+/*# sourceMappingURL=tagify.css.map */
